--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
     "from pandas_datareader._utils import RemoteDataError\n",
     "from datetime import timedelta\n",
     "\n",
-    "# Please read, my idea was to classify the data into three cateogries: \"UP\", \"DOWN\", \"NEUTRAL\"\n",
+    "# My idea was to classify the data into three cateogries: \"UP\", \"DOWN\", \"NEUTRAL\"\n",
     "# UP - the price of the stock is up MINIMUM_GAIN percent after LOOK_AHEAD_DAYS days.\n",
     "# DOWN - the price of the stock is down MINIMUM_GAIN percent after LOOK_AHEAD_DAYS days.\n",
     "# NEUTRAL - the price of stock is did not rise or fall past the MINIMUM_GAIN threshhold\n",
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "#just get the btc price points from the past year\n",
+    "# Just get the btc price points from the past year\n",
     "start_date = datetime.now() - timedelta(365)\n",
     "end_date = datetime.now() - timedelta(1)\n",
     "btc_df = Utilities.getData('BTC-USD', str(start_date.strftime('%Y-%m-%d')), str(end_date.strftime('%Y-%m-%d')))\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -277,54 +277,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>9377.486328</td>\n",
-       "      <td>9249.587891</td>\n",
-       "      <td>9259.783203</td>\n",
-       "      <td>9324.717773</td>\n",
-       "      <td>2.124268e+10</td>\n",
-       "      <td>9324.717773</td>\n",
-       "      <td>UP</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>7254.330566</td>\n",
+       "      <td>7174.944336</td>\n",
+       "      <td>7194.892090</td>\n",
+       "      <td>7200.174316</td>\n",
+       "      <td>1.856566e+10</td>\n",
+       "      <td>7200.174316</td>\n",
+       "      <td>NEUTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-11-03</td>\n",
-       "      <td>9379.806641</td>\n",
-       "      <td>9141.251953</td>\n",
-       "      <td>9324.787109</td>\n",
-       "      <td>9235.354492</td>\n",
-       "      <td>2.113222e+10</td>\n",
-       "      <td>9235.354492</td>\n",
-       "      <td>UP</td>\n",
+       "      <td>2020-01-02</td>\n",
+       "      <td>7212.155273</td>\n",
+       "      <td>6935.270020</td>\n",
+       "      <td>7202.551270</td>\n",
+       "      <td>6985.470215</td>\n",
+       "      <td>2.080208e+10</td>\n",
+       "      <td>6985.470215</td>\n",
+       "      <td>NEUTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-11-04</td>\n",
-       "      <td>9505.051758</td>\n",
-       "      <td>9191.485352</td>\n",
-       "      <td>9235.607422</td>\n",
-       "      <td>9412.612305</td>\n",
-       "      <td>2.617026e+10</td>\n",
-       "      <td>9412.612305</td>\n",
-       "      <td>UP</td>\n",
+       "      <td>2020-01-03</td>\n",
+       "      <td>7413.715332</td>\n",
+       "      <td>6914.996094</td>\n",
+       "      <td>6984.428711</td>\n",
+       "      <td>7344.884277</td>\n",
+       "      <td>2.811148e+10</td>\n",
+       "      <td>7344.884277</td>\n",
+       "      <td>NEUTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-11-05</td>\n",
-       "      <td>9457.417969</td>\n",
-       "      <td>9256.931641</td>\n",
-       "      <td>9413.004883</td>\n",
-       "      <td>9342.527344</td>\n",
-       "      <td>2.619861e+10</td>\n",
-       "      <td>9342.527344</td>\n",
-       "      <td>UP</td>\n",
+       "      <td>2020-01-04</td>\n",
+       "      <td>7427.385742</td>\n",
+       "      <td>7309.514160</td>\n",
+       "      <td>7345.375488</td>\n",
+       "      <td>7410.656738</td>\n",
+       "      <td>1.844427e+10</td>\n",
+       "      <td>7410.656738</td>\n",
+       "      <td>NEUTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-11-06</td>\n",
-       "      <td>9423.237305</td>\n",
-       "      <td>9305.909180</td>\n",
-       "      <td>9340.864258</td>\n",
-       "      <td>9360.879883</td>\n",
-       "      <td>2.313390e+10</td>\n",
-       "      <td>9360.879883</td>\n",
-       "      <td>UP</td>\n",
+       "      <td>2020-01-05</td>\n",
+       "      <td>7544.497070</td>\n",
+       "      <td>7400.535645</td>\n",
+       "      <td>7410.451660</td>\n",
+       "      <td>7411.317383</td>\n",
+       "      <td>1.972507e+10</td>\n",
+       "      <td>7411.317383</td>\n",
+       "      <td>NEUTRAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -388,17 +388,17 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>272 rows × 7 columns</p>\n",
+       "<p>212 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                    High           Low          Open         Close  \\\n",
        "Date                                                                 \n",
-       "2019-11-02   9377.486328   9249.587891   9259.783203   9324.717773   \n",
-       "2019-11-03   9379.806641   9141.251953   9324.787109   9235.354492   \n",
-       "2019-11-04   9505.051758   9191.485352   9235.607422   9412.612305   \n",
-       "2019-11-05   9457.417969   9256.931641   9413.004883   9342.527344   \n",
-       "2019-11-06   9423.237305   9305.909180   9340.864258   9360.879883   \n",
+       "2020-01-01   7254.330566   7174.944336   7194.892090   7200.174316   \n",
+       "2020-01-02   7212.155273   6935.270020   7202.551270   6985.470215   \n",
+       "2020-01-03   7413.715332   6914.996094   6984.428711   7344.884277   \n",
+       "2020-01-04   7427.385742   7309.514160   7345.375488   7410.656738   \n",
+       "2020-01-05   7544.497070   7400.535645   7410.451660   7411.317383   \n",
        "...                  ...           ...           ...           ...   \n",
        "2020-07-29  11169.356445  10895.455078  11099.833008  11111.213867   \n",
        "2020-07-30  11415.864258  10987.053711  11110.210938  11323.466797   \n",
@@ -408,11 +408,11 @@
        "\n",
        "                  Volume     Adj Close MonthTrend  \n",
        "Date                                               \n",
-       "2019-11-02  2.124268e+10   9324.717773         UP  \n",
-       "2019-11-03  2.113222e+10   9235.354492         UP  \n",
-       "2019-11-04  2.617026e+10   9412.612305         UP  \n",
-       "2019-11-05  2.619861e+10   9342.527344         UP  \n",
-       "2019-11-06  2.313390e+10   9360.879883         UP  \n",
+       "2020-01-01  1.856566e+10   7200.174316    NEUTRAL  \n",
+       "2020-01-02  2.080208e+10   6985.470215    NEUTRAL  \n",
+       "2020-01-03  2.811148e+10   7344.884277    NEUTRAL  \n",
+       "2020-01-04  1.844427e+10   7410.656738    NEUTRAL  \n",
+       "2020-01-05  1.972507e+10   7411.317383    NEUTRAL  \n",
        "...                  ...           ...        ...  \n",
        "2020-07-29  2.285725e+10  11111.213867         UP  \n",
        "2020-07-30  2.316047e+10  11323.466797         UP  \n",
@@ -420,19 +420,19 @@
        "2020-08-01  2.741007e+10  11053.614258         UP  \n",
        "2020-08-02  2.027171e+10  11246.348633         UP  \n",
        "\n",
-       "[272 rows x 7 columns]"
+       "[212 rows x 7 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "btc_df = btc_df.assign(MonthTrend=lambda x: \"N/A\") #introduce new column that will be the trend we are predicting\n",
-    "btc_df = btc_df.loc[~btc_df.index.duplicated(keep='first')] #delete all duplicate indices\n",
+    "btc_df = btc_df.assign(MonthTrend=lambda x: \"N/A\") # Introduce new column that will be the trend we are predicting\n",
+    "btc_df = btc_df.loc[~btc_df.index.duplicated(keep='first')] # Delete all duplicate indices\n",
     "\n",
-    "#Populate the classification column MonthTrend\n",
+    "# Populate the classification column MonthTrend\n",
     "for index, row in btc_df.iterrows():\n",
     "    current_date = index.to_pydatetime()\n",
     "    if (end_date - current_date).days > LOOK_AHEAD_DAYS:\n",
@@ -452,11 +452,13 @@
     "        else:\n",
     "            btc_df.at[pd.Timestamp(look_ahead_date), 'MonthTrend'] = 'NEUTRAL'\n",
     "            \n",
-    "#Now delete all columns that have a MonthTrend value of N/A\n",
+    "# Now delete all columns that have a MonthTrend value of N/A\n",
     "btc_df = btc_df[btc_df.MonthTrend != 'N/A']\n",
     "\n",
-    "#Data is now fully processed and ready to be trained on the machine learning model\n",
-    "#There are 3 values for MonthTrend: UP, DOWN, NEUTRAL\n",
+    "# Data is now fully processed and ready to be trained on the machine learning model\n",
+    "# There are 3 values for MonthTrend: UP, DOWN, NEUTRAL\n",
+    "# Please be careful when testing the model of leakage. There should be a LOOK_AHEAD_DAYS day gap between the train and test data sets\n",
+    "# otherwise, the train data set will unrealistically know something in the future\n",
     "btc_df"
    ]
   },
