grammar edits + clarification

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,11 +12,11 @@
     "from datetime import timedelta\n",
     "\n",
     "# My idea was to classify the data into three cateogries: \"UP\", \"DOWN\", \"NEUTRAL\"\n",
-    "# UP - the price of the stock is up MINIMUM_GAIN percent after LOOK_AHEAD_DAYS days.\n",
-    "# DOWN - the price of the stock is down MINIMUM_GAIN percent after LOOK_AHEAD_DAYS days.\n",
+    "# UP - the price of the stock is up MINIMUM_GAIN percent or more after LOOK_AHEAD_DAYS days.\n",
+    "# DOWN - the price of the stock is down MINIMUM_GAIN percent ore more after LOOK_AHEAD_DAYS days.\n",
     "# NEUTRAL - the price of stock is did not rise or fall past the MINIMUM_GAIN threshhold\n",
     "#\n",
-    "# EXAMPLE: LOOK_AHEAD_DAYS = 30, MINIMUM_GAIN = .05 (5%). If stock is up over 5% ore more after 30 days, \n",
+    "# EXAMPLE: LOOK_AHEAD_DAYS = 30, MINIMUM_GAIN = .05 (5%). If stock is up over 5% or more after 30 days, \n",
     "# we mark it as 'UP'. If the stock is down 5% or more after 30 days, we mark it as 'DOWN'. If the stock\n",
     "# is neither up nor down 5%, then we mark it as 'NEUTRAL'\n",
     "\n",
