--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "# My idea was to classify the data into three cateogries: \"UP\", \"DOWN\", \"NEUTRAL\"\n",
     "# UP - the price of the stock is up MINIMUM_GAIN percent or more after LOOK_AHEAD_DAYS days.\n",
-    "# DOWN - the price of the stock is down MINIMUM_GAIN percent ore more after LOOK_AHEAD_DAYS days.\n",
+    "# DOWN - the price of the stock is down MINIMUM_GAIN percent or more after LOOK_AHEAD_DAYS days.\n",
     "# NEUTRAL - the price of stock is did not rise or fall past the MINIMUM_GAIN threshhold\n",
     "#\n",
     "# EXAMPLE: LOOK_AHEAD_DAYS = 30, MINIMUM_GAIN = .05 (5%). If stock is up over 5% or more after 30 days, \n",
